crates/ruma-events/tests/ui/09-enum-invalid-kind.stderr
error: valid event kinds are GlobalAccountData, RoomAccountData, EphemeralRoom, Message, State, ToDevice found `NotReal`
 --> $DIR/09-enum-invalid-kind.rs:4:10
  |
4 |     enum NotReal {
  |          ^^^^^^^
